# GenXAI-OSS

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  LICENSES.md  MANIFEST.in  MEMORY_DESIGN.md  README.md  REQUIREMENTS.md  TOOLS_DESIGN.md  docker-compose.yml  mcp_config.json  package-lock.json  package.json  pyproject.toml  restart_ai_strategy_backend.sh  restart_ai_strategy_frontend.sh  restart_travel_planning_backend.sh  restart_travel_planning_frontend.sh
.github/workflows/: ci.yml  oss-guardrails.yml  release-oss.yml  release.yml  security.yml
.venv_oss_smoke/: pyvenv.cfg
.venv_toolmsg/: pyvenv.cfg
.venv_version_smoke/: pyvenv.cfg
applications/ai_strategy_agent/backend/: README.md  requirements.txt
applications/travel_planning_agent/: README.md
applications/travel_planning_agent/backend/: conftest.py  pytest.ini  requirements.txt
docs/: AGENT_TOOL_INTEGRATION.md  API.md  API_REFERENCE.md  AUDIT_LOGGING.md  BENCHMARKING.md  CLI_USAGE.md  COLLABORATION_PROTOCOLS.md  COMPETITIVE_MATRIX.md  CONNECTOR_SDK.md  DOCS_INDEX.md  FLOWS.md  GOVERNANCE_POLICY.md  GRAPH_VISUALIZATION.md  LLM_INTEGRATION.md  MCP_SETUP.md  PUBLISHING.md  QUICK_START_TUTORIAL.md  RELEASE_CHECKLIST.md  RELEASE_OSS_ENTERPRISE.md  SECURITY_CHECKLIST.md  TOOL_CREATION.md  WORKER_QUEUE_ENGINE.md  WORKFLOW_BEST_PRACTICES.md  WORKFLOW_EXECUTION.md
examples/: graph_visualization_demo.py
examples/code/: README.md  agent_presets_user_proxy_example.py  agent_registry_example.py  agent_with_memory_tools_example.py  agent_with_tools_example.py  end_to_end_example.py  flow_auction_example.py  flow_conditional_example.py  flow_coordinator_worker_example.py  flow_critic_review_example.py  flow_ensemble_voting_example.py  flow_loop_example.py  flow_map_reduce_example.py  flow_p2p_example.py  flow_parallel_example.py  flow_round_robin_example.py  flow_router_example.py  flow_selector_example.py  flow_subworkflow_example.py  flow_user_proxy_graph_example.py  function_calling_tools_example.py  graph_visualization_example.py  llm_agent_example.py  memory_system_example.py  routed_llm_provider_example.py  simple_workflow.py  testable_workflow.py  tool_execution_example.py  tool_registry_example.py  workflow_engine_example.py
examples/nocode/: README.md  content_generation.yaml  customer_support.yaml  data_pipeline.yaml  shared_memory_workflow.yaml  user_proxy_workflow.yaml
examples/nocode/agents/: README.md  common_agents.yaml  content_agents.yaml  data_agents.yaml  support_agents.yaml
examples/patterns/: 01_sequential_pattern.py  02_conditional_branching.py  03_parallel_execution.py  04_coordinator_delegator_worker.py  05_cyclic_iterative.py  06_peer_to_peer.py  README.md
genxai/: __init__.py
genxai/agents/: __init__.py  presets.py
genxai/api/: __init__.py  app.py
genxai/cli/: __init__.py  main.py
genxai/cli/commands/: __init__.py  tool.py  workflow.py
genxai/config/: __init__.py  settings.py
genxai/core/: __init__.py
genxai/core/agent/: __init__.py  base.py  config_io.py  (+2 more)
genxai/flows/: __init__.py  auction.py  base.py  conditional.py  coordinator_worker.py  critic_review.py  ensemble_voting.py  loop.py  map_reduce.py  p2p.py  parallel.py  round_robin.py  router.py  selector.py  subworkflow.py
genxai/llm/: __init__.py  base.py  factory.py  routing.py
genxai/performance/: __init__.py  cache.py  pooling.py
genxai/tools/: __init__.py  base.py  dynamic.py  mcp_server.py  registry.py  templates.py
genxai/utils/: __init__.py  enterprise_compat.py  llm_ranking.py  tokens.py
k8s/: deployment.yaml  hpa.yaml
scripts/: __init__.py  export_enterprise_repo.sh  export_studio_workflow.py  generate_comparison_pdf.py  seed_agents.py  sync_workflow_agents.py
scripts/benchmarks/: __init__.py  run_benchmark.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_agent_runtime_errors.py  test_end_to_end_workflow.py  test_llm_integration.py  test_offline_workflows.py  test_tool_integration_offline.py  test_workflow_integration.py
tests/unit/: test_agent_config_yaml.py  test_agent_presets.py  test_agent_registry.py  test_agent_runtime.py  test_anthropic_provider.py  test_benchmark_script.py  test_cli_tool_schema_export.py  test_cli_workflow.py  test_cohere_provider.py  test_collaboration_protocols.py  test_communication.py  test_communication_tools.py  test_computation_tools.py  test_data_tools.py  test_database_tools.py  test_execution_store.py  test_file_tools.py  test_google_provider.py  test_graph.py  test_graph_executor.py  test_human_input_tool.py  test_llm_factory.py  test_llm_providers.py  test_llm_ranking.py  test_llm_routing.py  test_memory_persistence.py  test_memory_short_term.py  test_memory_system.py  test_message_bus.py  test_performance_cache.py  test_performance_pooling.py  test_shared_memory_bus.py  test_state_manager.py  test_tokens.py  test_tool_integration.py  test_tool_registry.py  test_tool_schema_export.py  test_tool_templates.py  test_vector_store_factory.py  test_web_tools.py  (+3 more)
tests/utils/: mock_llm.py
(+127 files in other folders)
