[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genxai-framework"
version = "1.0.0"
description = "GenXAI Core (MIT) - Advanced Agentic AI Framework with Graph-Based Orchestration"
readme = "README.md"
requires-python = ">=3.11"
# Use an SPDX license expression (setuptools deprecates the TOML table form).
license = "MIT"
# Explicitly include license files in the built distributions.
license-files = ["LICENSE", "LICENSES.md"]
authors = [
    {name = "GenXAI Team", email = "team@genxai.dev"}
]
keywords = ["ai", "agents", "llm", "graph", "orchestration", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.8.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.23",
]

[project.scripts]
# OSS CLI entry point. Enterprise editions can extend this CLI via
# `genxai.cli_plugins` entry points.
genxai = "genxai.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

llm = [
    "openai>=1.6.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.37",
    "tokenizers>=0.15.0",
]

storage = [
    "pinecone-client>=3.0.0",
    "weaviate-client>=3.26.0",
    "chromadb>=0.4.18",
    "neo4j>=5.15.0",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
]

tools = [
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "pillow>=10.1.0",
    "pypdf2>=3.0.1",
    "python-magic>=0.4.27",
    "RestrictedPython>=6.2",
]

observability = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "prometheus-client>=0.19.0",
]

connectors = [
    "aiokafka>=0.10.0",
    "aioboto3>=12.0.0",
]

api = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
]

all = [
    "genxai[dev,llm,storage,tools,api]",
]

[project.urls]
Homepage = "https://genxai.dev"
Documentation = "https://docs.genxai.dev"
Repository = "https://github.com/genexsus-ai/genxai"
Issues = "https://github.com/genexsus-ai/genxai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["genxai*"]
exclude = ["tests*", "docs*", "examples*", "studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=genxai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Couldn't import C tracer.*:coverage.exceptions.CoverageWarning",
    "ignore:Exception ignored in.*AsyncHttpxClientWrapper.__del__.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["genxai"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
